# uape

./: .gitignore  CLAUDE.md  DOCS.md  README.md  package-lock.json
back_end/: db.sqlite3  pyproject.toml  seed_sections.py
back_end/accounts/: admin.py  signals.py  tests.py
back_end/accounts/migrations/: 0001_initial.py  0002_profile.py  0003_useronboarding.py  0004_emailverification.py  0005_assessmentresult.py
back_end/accounts/models/: __init__.py  assessment_result.py  email_verification.py  onboarding.py  profile.py  user.py
back_end/accounts/serializers/: __init__.py  assessment.py  profile.py  register.py
back_end/accounts/templates/accounts/: verify_email.html
back_end/accounts/views/: assessment.py
back_end/api/: urls.py
back_end/api/views/: __init__.py  auth.py  google_auth.py  onboarding.py  profile.py  resend_verification.py  verify_email.py
back_end/core/: settings.py  urls.py
back_end/core/fixtures/: dumps.json
back_end/courses/: admin.py  tests.py  urls.py
back_end/courses/migrations/: 0001_initial.py  0002_alter_bookmark_options_alter_channel_options_and_more.py  0003_playlist_detail_fields.py
back_end/courses/models/: __init__.py  bookmark.py  channel.py  playlist.py  section.py  tag.py  video.py
back_end/courses/serializers/: __init__.py  bookmark.py  channel.py  favorited.py  playlist.py  section.py  tag.py  video.py
back_end/courses/services/: youtube.py
back_end/courses/static/admin/css/: ckeditor_dark.css
back_end/courses/static/admin/js/: section_inline_toggle.js
back_end/courses/views/: __init__.py  bookmark.py  channel.py  favorite.py  playlist.py  recommended.py  section.py  video.py
back_end/uape/: apps.py
front_end/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
front_end/.claude/: settings.local.json
front_end/src/: App.jsx  index.css  (+1 more)
(+45 files in other folders)
