[project]
name = "back-end"
version = "0.1.0"
description = ""
authors = [
    {name = "Madi",email = "madi_gaziz@mail.ru"}
]
license = {text = "source /Users/madi_gaziz/Desktop/alter_work/instagram/venv/bin/activate"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "ruff (>=0.15.4,<0.16.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
